--- a/index.css
+++ b/index.css
@@ -79,6 +79,7 @@ html {
 .inicio .contenido-banner {
   padding: 20px;
   background-color: #1e2326;
+  /* background-color: red; */
   max-width: 350px;
   margin: auto;
   text-align: center;
@@ -88,7 +89,36 @@ html {
 .inicio .contenido-banner img {
   margin-top: 40px;
   border: 10px solid #1cb698;
-  display: block;
+  /* display: block; */
   width: 80%;
   border-radius: 100%;
+}
+
+.inicio .contenido-banner h1 {
+  margin-top: 40px;
+  font-size: 42px;
+  font-family: "Righteous";
+}
+
+.inicio .contenedor-banner h2 {
+  font-size: 15px;
+  font-weight: normal;
+}
+
+.inicio .contenido-banner .redes a {
+  color: #fff;
+  display: inline-block;
+  text-decoration: none;
+  border: 1px solid #fff;
+  border-radius: 100%;
+  width: 42px;
+  height: 42px;
+  line-height: 42px;
+  margin: 40px 5px;
+  font-size: 20px;
+  transition: 0.3s;
+}
+
+.inicio .contenido-banner .redes a:hover {
+  background-color: #1cb698;
 }
